force-app/main/default/objects/Earned_Prelicense__c/Earned_Prelicense__c.object-meta.xml
<CustomObject>
    <description>PacPoint0KN08312020-Created for CE and INS Portal</description>
    <label>Earned Prelicense</label>
    <nameField>
        <displayFormat>EP-{000000}</displayFormat>
        <label>Earned Prelicense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Earned Prelicense</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>