force-app/main/default/objects/Earned_Prelicense__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <description>PacPoint-KN08312020-Created for CE and INS Portal</description>
    <label>Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Earned Prelicense</relationshipLabel>
    <relationshipName>Earned_Prelicense</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>