force-app/main/default/objects/Earned_Prelicense__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN09012020-Created for PVL CE and INS</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Earned Prelicense</relationshipLabel>
    <relationshipName>Earned_Prelicense</relationshipName>
    <type>Lookup</type>
</CustomField>