force-app/main/default/objects/Earned_Prelicense__c/fields/AttendeeCode__c.field-meta.xml
<CustomField>
    <fullName>AttendeeCode__c</fullName>
    <formula>PrelicenseContinuingEducation__r.AttendeeCodeFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Code</label>
    <type>Text</type>
</CustomField>