force-app/main/default/objects/Earned_Prelicense__c/fields/CertificateNumber__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumber__c</fullName>
    <formula>IF(

ISBLANK( CertificateNumberText__c ) , 
CertificateNumberAutonum__c , 
CertificateNumberText__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Number</label>
    <type>Text</type>
</CustomField>