force-app/main/default/objects/Earned_Prelicense__c/fields/CertificateNumberAutonum__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumberAutonum__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Certificate Number Autonum</label>
    <type>AutoNumber</type>
</CustomField>