force-app/main/default/objects/Earned_Prelicense__c/fields/PassDate__c.field-meta.xml
<CustomField>
    <fullName>PassDate__c</fullName>
    <formula>PrelicenseContinuingEducation__r.PassDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass Date</label>
    <type>Date</type>
</CustomField>