force-app/main/default/objects/Earned_Prelicense__c/fields/PrelicenseContinuingEducation__c.field-meta.xml
<CustomField>
    <fullName>PrelicenseContinuingEducation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN08312020-Created for CE and INS Portal</description>
    <label>Prelicense &amp; Continuing Education</label>
    <referenceTo>PrelicenseCEEnrollment__c</referenceTo>
    <relationshipLabel>Earned Prelicense</relationshipLabel>
    <relationshipName>Earned_Prelicense</relationshipName>
    <type>Lookup</type>
</CustomField>